cmake_minimum_required(VERSION 3.4)
project(ips)
#set(CMAKE_CXX_COMPILER             "clang++")
set(CMAKE_CXX_COMPILER             "g++")
set(CMAKE_CXX_STANDARD 11)
set (CMAKE_CXX_FLAGS                "-Wall -static -g -DASIO_STANDALONE")
include_directories("include")
if(MINGW)
    link_libraries("ws2_32")
    link_libraries("wsock32")
endif()

#link_libraries("boost_system")
link_libraries("pthread")
file(GLOB all_cpp "*.cpp")
set(SOURCE_FILES ${all_cpp})
add_executable(ips ${SOURCE_FILES})